add support and structure for roles