@@ -5,25 +5,26 @@ import org.springframework.security.core.GrantedAuthority;
 import org.springframework.security.core.authority.SimpleGrantedAuthority;
 import org.springframework.security.core.userdetails.UserDetails;
 
-import java.util.Arrays;
 import java.util.Collection;
 import java.util.List;
+import java.util.stream.Collectors;
 
 public class CustomUserDetails implements UserDetails {
-    private int id;
-    private String userName;
+    private Long id;
+    private String username;
     private String password;
     private boolean active;
     private List<SimpleGrantedAuthority> authorityList;
 
     public CustomUserDetails(User user) {
         this.id = user.getId();
-        this.userName = user.getUserName();
+        this.username = user.getUserName();
         this.active = user.isActive();
         this.password = user.getPassword();
-        this.authorityList = Arrays.stream(user.getRoles().split(","))
-                .map(SimpleGrantedAuthority::new)
-                .toList();
+        this.authorityList = user.getRoles()
+                .stream()
+                .map(role -> new SimpleGrantedAuthority(role.getRoleName()))
+                .collect(Collectors.toList());
     }
 
     @Override
@@ -38,7 +39,7 @@ public class CustomUserDetails implements UserDetails {
 
     @Override
     public String getUsername() {
-        return this.userName;
+        return this.username;
     }
 
     @Override
